# axum_server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.pkl  flake.nix  log  log.json  spec.yaml  testlog.json  testlog2.json
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
configuration/: base.pkl  base.yaml  development.pkl  development.yaml  production.pkl  production.yaml
migrations/2024-03-18-155946_add_status_to_subscriptions/: up.sql
migrations/2024-03-18-161604_make_status_not_null_in_subscriptions/: down.sql  up.sql
migrations/2024-03-20-151128_make_timestamp_not_null/: up.sql
migrations/2024-05-30-210218_create_users_table/: up.sql
migrations/2024-05-31-124606_rename_password_column/: up.sql
migrations/2024-05-31-155440_add_salt_to_users/: down.sql  up.sql
migrations/2024-05-31-221855_remove_salt_from_users/: up.sql
migrations/2024-06-08-070513_add_seed_user/: down.sql  up.sql
migrations/2024-06-09-000428_improve_seeded_password/: down.sql  up.sql
migrations/2024-06-18-080858_create_idempotency_table/: down.sql  up.sql
proptest-regressions/domain/: admin_password.txt
scripts/: build_configurations.sh  generate_certs.sh  init_db.sh  init_db_ssl.sh  init_redis.sh  request_per_second.sh  test_performance.sh
src/: authentication.rs  configuration.rs  database.rs  domain.rs  email_client.rs  idempotency.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/database/: diesel_configuration.rs  queries.rs
src/database/queries/: insert_subscriber.rs  newsletter_queries.rs  token_queries.rs  user_queries.rs
src/domain/: admin_password.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/email_client/: send.rs
src/idempotency/: key.rs  persistance.rs
src/routes/: admin.rs  confirm_subscriptions.rs  greet.rs  health_check.rs  home.rs  newsletters.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/reset_password/: post.rs
src/routes/login/: get.rs  post.rs
src/routes/reset_password/: get.rs  post.rs
templates/: subscription_email.html
templates/emails/: subscription_email.html
templates/pages/: admin_dashboard.html  home.html  login.html  newsletters.html  reset_password.html
test_migrations/2024-02-19-204031_create_subscriptions_table/: up.sql
test_migrations/2024-03-18-155946_add_status_to_subscriptions/: down.sql
test_migrations/2024-03-19-033500_create_subscriptions_token_table/: down.sql  up.sql
test_migrations/2024-03-20-145223_add_timestamp_to_tokens/: down.sql  up.sql
test_migrations/2024-03-20-151128_make_timestamp_not_null/: down.sql
test_migrations/2024-05-20-125708_remove_token/: down.sql  up.sql
test_migrations/2024-05-31-124606_rename_password_column/: down.sql
test_migrations/2024-05-31-155440_add_salt_to_users/: up.sql
test_migrations/2024-05-31-221855_remove_salt_from_users/: down.sql
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription.rs  subscription_confirm.rs
tracking/: peformance_tracking.md
