[package]
name = "axum_newsletter"
version = "0.1.0"
authors = ["Gabriel Aguiar <gabriel.masarin.aguiar@gmail.com>"]
edition = "2021"
[lib]
path = "src/lib.rs"
[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = "0.4.34"
config = "0.14.0"
deadpool = "0.10.0"
diesel = { version = "2.1.4", features = ["uuid", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
once_cell = "1.19.0"
reqwest = "0.11.24"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.7.0", features = ["v7"] }
