[package]
name = "axum_newsletter"
version = "0.1.0"
authors = ["Gabriel Aguiar <gabriel.masarin.aguiar@gmail.com>"]
edition = "2021"
[lib]
path = "src/lib.rs"
[profile.release]
strip = true

[dependencies.reqwest]
version = "0.11.24"
default-features = false
features = ["json", "rustls-tls"]

[dependencies]
thiserror = "1"
anyhow = "1"
axum = "0.7.4"
axum-macros = "0.4.1"
chrono = "0.4.34"
claims = "0.7.1"
config = "0.14.0"
deadpool = "0.10.0"
diesel = { version = "2.1.4", features = ["uuid", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool", "async-connection-wrapper"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
fake = "2.9.2"
futures-util = "0.3.30"
linkify = "0.10.0"
once_cell = "1.19.0"
proptest = "1.4.0"
rand = { version = "0.8.5", features = ["std_rng"] }
rustls = { version = "0.22.1", features = ["ring"] }
rustls-native-certs = "0.7.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.114"
tera = "1.19.1"
tokio = { version = "1.35.1", features = ["rt","macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.11.1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.7.0", features = ["v7"] }
validator = "0.17.0"
webpki-roots = "0.26.1"
wiremock = "0.6.0"
base64 = "0.22.1"
